Added optional foldmarks, updates Readme

--- a/templates/gbrief.tex
+++ b/templates/gbrief.tex
@@ -9,7 +9,9 @@
 \usepackage[rundauf]ngerman[rundzu]
 
 \fenstermarken
+{% if mark %}
 \faltmarken
+{% endif %}
 \trennlinien
 
 \Name                [rundauf]{{ absname }}[rundzu]
